--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,1 +1,6 @@
 include: ../analysis_options.yaml
+
+analyzer:
+  errors:
+    public_member_api_docs: ignore
+    type_annotate_public_apis: ignore
